--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#ffffff",
   "logo": "/img/uploads/gerty-farma.png",
-  "name": "novagerty",
+  "name": "Gerty Farma",
   "short_name": "novagerty",
   "lang": "pt_br",
   "currency": "BRL",
