Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -9,7 +9,7 @@
   "bg_color": "#ffffff",
   "logo": "/img/uploads/gerty-farma.png",
   "name": "Gerty Farma",
-  "short_name": "novagerty",
+  "short_name": "Gerty Farma",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
