--- a/content/settings.json
+++ b/content/settings.json
@@ -18,6 +18,6 @@
   "secondary_color": "#008378",
   "icon": "/img/uploads/gertyfarma.png",
   "store_id": 1171,
-  "description": "novagerty ",
+  "description": "A sua farmácia digital e um dos maiores e-commerces do setor de Beleza e Saúde no Brasil. Estamos disponíveis 24 horas por dia, 7 dias por semana, para trazer a você as melhores ofertas de medicamentos, dermocosméticos, suplementos alimentares, produtos de saúde, fitness, higiene, perfumaria e beleza na Internet, de A a Z.",
   "large_icon": "/img/uploads/gertyfarma.png"
 }
