Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,21 +1,21 @@
 {
   "domain": "novagerty.netlify.app",
   "currency_symbol": "R$",
-  "primary_color": "#008378",
+  "primary_color": "#3bbfac",
   "theme": {
     "bootswatch": "_",
     "custom": "_"
   },
   "bg_color": "#ffffff",
-  "logo": "/img/uploads/gerty-farma.png",
+  "logo": "/img/uploads/gertyfarma.png",
   "name": "Gerty Farma",
   "short_name": "Gerty Farma",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
-  "favicon": "/img/uploads/gertyfarma.png",
+  "favicon": "/img/uploads/g.png",
   "country_code": "BR",
-  "secondary_color": "#303f76",
+  "secondary_color": "#0e7875",
   "icon": "/img/uploads/gertyfarma.png",
   "store_id": 1171,
   "description": "A sua farmácia digital e um dos maiores e-commerces do setor de Beleza e Saúde no Brasil. Estamos disponíveis 24 horas por dia, 7 dias por semana, para trazer a você as melhores ofertas de medicamentos, dermocosméticos, suplementos alimentares, produtos de saúde, fitness, higiene, perfumaria e beleza na Internet, de A a Z.",
