Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -16,8 +16,8 @@
   "favicon": "/img/uploads/g.png",
   "country_code": "BR",
   "secondary_color": "#0e7875",
-  "icon": "/img/uploads/gertyfarma.png",
+  "icon": "/img/uploads/g.png",
   "store_id": 1171,
   "description": "A sua farmácia digital e um dos maiores e-commerces do setor de Beleza e Saúde no Brasil. Estamos disponíveis 24 horas por dia, 7 dias por semana, para trazer a você as melhores ofertas de medicamentos, dermocosméticos, suplementos alimentares, produtos de saúde, fitness, higiene, perfumaria e beleza na Internet, de A a Z.",
-  "large_icon": "/img/uploads/gertyfarma.png"
+  "large_icon": "/img/uploads/g.png"
 }
