--- a/content/settings.json
+++ b/content/settings.json
@@ -10,6 +10,7 @@
   "logo": "/img/uploads/gertyfarma.png",
   "name": "Gerty Farma",
   "short_name": "Gerty Farma",
+  "repository": "novagerty",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
