Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,5 @@
 {
-  "domain": "novagerty.netlify.app",
+  "domain": "scsmedicamentos.netlify.app",
   "currency_symbol": "R$",
   "primary_color": "#268cb9",
   "theme": {
